--- a/examples/test.html
+++ b/examples/test.html
@@ -1,4 +1,4 @@
-<img src="example_images/01540_driftwood_1366x768.jpg" width="200"><br>
+<img src="images/01540_driftwood_1366x768.jpg" width="200"><br>
 <div style="background-color:rgb(133,130,142);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(95,72,69);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(137,167,222);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -6,77 +6,77 @@
 <div style="background-color:rgb(231,193,135);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(223,214,205);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/02.jpg" width="200"><br>
+<img src="images/02.jpg" width="200"><br>
 <div style="background-color:rgb(91,100,119);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(133,146,167);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(39,33,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(165,174,187);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(155,30,30);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/04103_misslibertyii_1920x1080.jpg" width="200"><br>
+<img src="images/04103_misslibertyii_1920x1080.jpg" width="200"><br>
 <div style="background-color:rgb(179,206,212);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(114,157,182);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(30,89,102);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/04141_teagrove_1920x1080.jpg" width="200"><br>
+<img src="images/04141_teagrove_1920x1080.jpg" width="200"><br>
 <div style="background-color:rgb(55,45,12);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(118,96,49);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(198,175,127);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(114,150,29);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/07.jpg" width="200"><br>
+<img src="images/07.jpg" width="200"><br>
 <div style="background-color:rgb(88,112,79);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(41,57,35);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e7-d9cc-c71ae124-a406-5254a201df90" width="200"><br>
+<img src="images/11e7-d9cc-c71ae124-a406-5254a201df90" width="200"><br>
 <div style="background-color:rgb(189,144,62);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(20,14,10);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(4,118,150);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e7-da95-5e2b7842-a7f8-5254a201d53d" width="200"><br>
+<img src="images/11e7-da95-5e2b7842-a7f8-5254a201d53d" width="200"><br>
 <div style="background-color:rgb(18,16,18);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(143,34,28);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(190,174,164);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e7-fd13-3db33eea-baef-5254a201d53d" width="200"><br>
+<img src="images/11e7-fd13-3db33eea-baef-5254a201d53d" width="200"><br>
 <div style="background-color:rgb(13,12,12);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(48,41,33);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(146,139,141);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e8-04e0-505cbd8b-be78-960000078656_2018-01-19 09_59_31-Saatchi Art_ there is nobody Painting by Pierre Richir.png" width="200"><br>
+<img src="images/11e8-04e0-505cbd8b-be78-960000078656_2018-01-19 09_59_31-Saatchi Art_ there is nobody Painting by Pierre Richir.png" width="200"><br>
 <div style="background-color:rgb(49,53,51);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(118,122,119);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(184,184,181);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e8-04e8-266d26bf-be78-960000078656_HTB1q4ckc7fb_uJkSnfoq6z_epXav.jpg" width="200"><br>
+<img src="images/11e8-04e8-266d26bf-be78-960000078656_HTB1q4ckc7fb_uJkSnfoq6z_epXav.jpg" width="200"><br>
 <div style="background-color:rgb(28,27,36);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(146,116,104);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e8-04ea-9bdc8ae8-be78-960000078656_f6529438426ea9b9307cfddeae78a3ce.jpg" width="200"><br>
+<img src="images/11e8-04ea-9bdc8ae8-be78-960000078656_f6529438426ea9b9307cfddeae78a3ce.jpg" width="200"><br>
 <div style="background-color:rgb(20,18,15);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(76,73,68);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(187,185,183);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/11e8-07fd-c9f843f7-8da8-960000078656_2018-01-19 10_44_06-Saatchi Art_ Art lover - Limited Edition 2 of 10 Photography by Emilie Mori.png" width="200"><br>
+<img src="images/11e8-07fd-c9f843f7-8da8-960000078656_2018-01-19 10_44_06-Saatchi Art_ Art lover - Limited Edition 2 of 10 Photography by Emilie Mori.png" width="200"><br>
 <div style="background-color:rgb(247,228,222);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(239,189,161);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(75,47,48);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/14775211410_42b8d244da_o.jpg" width="200"><br>
+<img src="images/14775211410_42b8d244da_o.jpg" width="200"><br>
 <div style="background-color:rgb(238,188,154);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(50,51,62);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(127,112,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/8448152811.jpg" width="200"><br>
+<img src="images/8448152811.jpg" width="200"><br>
 <div style="background-color:rgb(85,81,79);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(121,115,112);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(38,40,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(193,194,196);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/Bez nazwy.jpg" width="200"><br>
+<img src="images/Bez nazwy.jpg" width="200"><br>
 <div style="background-color:rgb(0,0,0);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/Fotolia_45549559_320_480.jpg" width="200"><br>
+<img src="images/Fotolia_45549559_320_480.jpg" width="200"><br>
 <div style="background-color:rgb(237,240,247);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(50,50,8);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(107,147,10);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -85,31 +85,31 @@
 <div style="background-color:rgb(237,122,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(160,155,69);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/british-flag-medium.jpg" width="200"><br>
+<img src="images/british-flag-medium.jpg" width="200"><br>
 <div style="background-color:rgb(207,21,44);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(253,253,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(1,35,124);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/giant-panda-shutterstock_86500690.jpg" width="200"><br>
+<img src="images/giant-panda-shutterstock_86500690.jpg" width="200"><br>
 <div style="background-color:rgb(34,58,15);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(88,151,27);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(164,165,120);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(237,229,204);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(99,101,72);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
+<img src="images/mac_os_x_retina_zebras-wallpaper-1920x1080.jpg" width="200"><br>
 <div style="background-color:rgb(70,119,38);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(27,61,25);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(124,175,45);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(116,142,139);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(189,208,207);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/sample1_l.jpg" width="200"><br>
+<img src="images/sample1_l.jpg" width="200"><br>
 <div style="background-color:rgb(105,117,82);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(56,62,43);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(146,116,163);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/sample_0.jpg" width="200"><br>
+<img src="images/sample_0.jpg" width="200"><br>
 <div style="background-color:rgb(49,67,6);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(117,139,35);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(175,190,88);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
@@ -117,7 +117,7 @@
 <div style="background-color:rgb(240,184,191);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(245,63,119);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <br><br><br>
-<img src="example_images/windows_xp_bliss-wide.jpg" width="200"><br>
+<img src="images/windows_xp_bliss-wide.jpg" width="200"><br>
 <div style="background-color:rgb(82,156,253);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(56,89,10);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
 <div style="background-color:rgb(200,227,254);display:inline-block;width:40px;height:40px;margin-right:-5px;"></div>
